@@ -1,0 +1,10 @@
+# Sample config file for RegexBoostProcessor
+# This example applies boost on the "url" field to boost or deboost certain urls
+# All rules are evaluated, and if several of them match, the boosts are multiplied.
+# If for example one rule with boost 2.0 and one rule with boost 0.1 match, the resulting urlboost=0.2
+
+https?://[^/]+/old/.* 0.1		#Comments are removed
+https?://[^/]+/.*index\([0-9]\).html$	0.5
+
+# Prioritize certain sites over others
+https?://www.mydomain.no/.*	1.5
